--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                         <article>
                             <img src="img/acceptance.jpg">
                         </article>
+                        <article>
+                            <img src="img/hard.png">
+                        </article>
                         <h2>Featured Work</h2>
                         <div class="row">
                                 <div class="col-lg-4">
