Adding more to Portfolio

--- a/index.html
+++ b/index.html
@@ -39,29 +39,72 @@
                         <article>
                             <img src="img/hard.png">
                         </article>
-                        <h2>Featured Work</h2>
+                        <h1>Featured Work</h1>
                         <div class="row">
                                 <div class="col-lg-4">
-                                  <img class="img-circle" src="img/card.png" alt="Generic placeholder image" width="140" height="140">
-                                  <h2>Animal Trading Card</h2>
-                                  <p>One of the first projects from the Google Developer Challenge</p>
-                                  <p><a class="btn btn-default" href="https://github.com/Leny73/AnimalTradingCard" role="button">View on GitHub &raquo;</a></p>
+                                  <img class="img-circle" src="img/edi.png" alt="Generic placeholder image" width="140" height="140">
+                                  <h2>Image Processing using IPython</h2>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                  <p>One of the first projects from my second year at Univeristy</p>
+                                  <p><a class="btn btn-default" href="https://github.com/Leny73/iaml" role="button">View on GitHub &raquo;</a></p>
                                 </div>
                                 <div class="col-lg-4">
                                   <img class="img-circle" src="img/pixel.png" alt="Generic placeholder image" width="140" height="140">
                                   <h2>Pixel Art Maker</h2>
+                                  <br>
+                                  <br>
+                                  <br>
+                                  <br>
                                   <p>JavaScript and JQuery project from the Google Developer Challenge that gave me the opportunity to be selected for the Google Developer Nanodegree Scholarship</p>
                                   <p><a class="btn btn-default" href="https://github.com/Leny73/project-pixel-art-maker-starter" role="button">View on GitHub &raquo;</a></p>
                                 </div>
                                 <div class="col-lg-4">
                                   <img class="img-circle" src="img/juniper.png" alt="Generic placeholder image" width="140" height="140">   
                                   <h2>Foundation Daskal Branzalov</h2>
+                                  <br>
+                                  <br>
+                                  <br>
+                                  <br>
                                   <p>Personal WordPres Project for a foundation in Bulgaria</p>
                                   <p><a class="btn btn-default" href="https://daskalbranzalov.com/" role="button">Visit site &raquo;</a></p>
                                 </div>
+                                <h1>Future Projects</h1>
+                                <div class="row">
+                                        <div class="col-lg-4">
+                                          <img class="img-circle" src="img/hiero.jpg" alt="Generic placeholder image" width="140" height="140">
+                                          <h2>Image processing of hieroglyphics</h2>
+                                            <br>
+                                            <br>
+                                            <br>
+                                            <br>
+                                          <p>Using machine learning techniques to analize images and understand Egyprian hieroglyphics</p>
+                                        </div>
+                                        <div class="col-lg-4">
+                                          <img class="img-circle" src="img/food.jpg" alt="Generic placeholder image" width="140" height="140">
+                                          <h2>Intelligent food</h2>
+                                          <br>
+                                          <br>
+                                          <br>
+                                          <br>
+                                          <p>Using machine learning to train an artificial agent that cultivates crops in order to gain abundant food supply on human Earth and in the Milky Way Galaxy</p>
+                                        </div>
+                                        <div class="col-lg-4">
+                                          <img class="img-circle" src="img/hubble.jpeg" alt="Generic placeholder image" width="140"height="140">   
+                                          <h2>Cosmological Data Analysis</h2>
+                                          <br>
+                                          <br>
+                                          <br>
+                                          <br>
+                                          <p>Personal project that I thought about while working on Cosmological Data. I think machines are better at analysing data than humans </p>
+                                        </div>
                     </section>
+                    
                     <aside class="col-sm-2 col-sm-pull-8">
-                        <h2 class="range-title">Interests</h2>
+                        <h1 class="range-title">Interests</h1>
+                        <br>
                         <div class="range-list">
                             <a href="">
                                 <img src="img/machine learning.png" alt="machine learning" />
