Adding PyTorch Badge

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <img class="logoImage" src="img/logo1.jpeg">
                 </div>
                 <div class="right_col">
-                    <h3>LYUBEN BRANZALOV</h3>
-                    <h3>SOFTWARE DEVELOPER</h3>
+                    <h3>Lyuben Branzalov</h3>
+                    <h3>Software Developer</h3>
                 </div>
             </div>
         </header>
@@ -38,6 +38,9 @@
                         </article>
                         <article>
                             <img src="img/hard.png">
+                        </article>
+                        <article>
+                            <img src="img/pytorch.png">
                         </article>
                         <h1>Featured Work</h1>
                         <div class="row">
