Adding new Projects to my Resume

--- a/index.html
+++ b/index.html
@@ -45,71 +45,49 @@
                         <h1>Featured Work</h1>
                         <div class="row">
                                 <div class="col-lg-4">
-                                  <img class="img-circle" src="img/edi.png" alt="Generic placeholder image" width="140" height="140">
-                                  <h2>Image Processing using IPython</h2>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                  <p>One of the first projects from my second year at Univeristy</p>
-                                  <p><a class="btn btn-default" href="https://github.com/Leny73/iaml" role="button">View on GitHub &raquo;</a></p>
+                                  <img class="img-circle" src="img/screen.png" alt="Generic placeholder image" width="140" height="140">
+                                  <h2>Cultural Map Plovdiv</h2>
+                                  <p>One of my first projects created with inspiration from my scholarship with Grow with Google. I created an interractive map using React Native showcasing the events and historical places of Plovdiv European Capital of Culture for 2019.</p>
+                                  <p><a class="btn btn-default" href="https://github.com/Leny73/Culture-Map-Plovdiv" role="button">View on GitHub &raquo;</a></p>
                                 </div>
                                 <div class="col-lg-4">
                                   <img class="img-circle" src="img/pixel.png" alt="Generic placeholder image" width="140" height="140">
                                   <h2>Pixel Art Maker</h2>
-                                  <br>
-                                  <br>
-                                  <br>
-                                  <br>
                                   <p>JavaScript and JQuery project from the Google Developer Challenge that gave me the opportunity to be selected for the Google Developer Nanodegree Scholarship</p>
                                   <p><a class="btn btn-default" href="https://github.com/Leny73/project-pixel-art-maker-starter" role="button">View on GitHub &raquo;</a></p>
                                 </div>
                                 <div class="col-lg-4">
-                                  <img class="img-circle" src="img/juniper.png" alt="Generic placeholder image" width="140" height="140">   
-                                  <h2>Foundation Daskal Branzalov</h2>
-                                  <br>
-                                  <br>
-                                  <br>
-                                  <br>
-                                  <p>Personal WordPres Project for a foundation in Bulgaria</p>
-                                  <p><a class="btn btn-default" href="https://daskalbranzalov.com/" role="button">Visit site &raquo;</a></p>
+                                  <img class="img-circle" src="img/arcade.png" alt="Generic placeholder image" width="140" height="140">   
+                                  <h2>Arcade Game</h2>
+                                  <p>One of the projects included in the Nanodegree by Udacity Front-End Web Development. An Arcade Game that consists of 1 hero and multiple bugs the hero is trying to evade them and reach the water in order to escape. The game becomes difficult as the bugs are increasing using random number generation.</p>
+                                  <p><a class="btn btn-default" href="https://github.com/Leny73/frontend-nanodegree-arcade-game" role="button">View on GitHub &raquo;</a></p>
                                 </div>
-                                <h1>Future Projects</h1>
-                                <div class="row">
-                                        <div class="col-lg-4">
-                                          <img class="img-circle" src="img/hiero.jpg" alt="Generic placeholder image" width="140" height="140">
-                                          <h2>Image processing of hieroglyphics</h2>
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>
-                                          <p>Using machine learning techniques to analize images and understand Egyprian hieroglyphics</p>
-                                        </div>
-                                        <div class="col-lg-4">
-                                          <img class="img-circle" src="img/food.jpg" alt="Generic placeholder image" width="140" height="140">
-                                          <h2>Intelligent food</h2>
-                                          <br>
-                                          <br>
-                                          <br>
-                                          <br>
-                                          <p>Using machine learning to train an artificial agent that cultivates crops in order to gain abundant food supply on human Earth and in the Milky Way Galaxy</p>
-                                        </div>
-                                        <div class="col-lg-4">
-                                          <img class="img-circle" src="img/hubble.jpeg" alt="Generic placeholder image" width="140"height="140">   
-                                          <h2>Cosmological Data Analysis</h2>
-                                          <br>
-                                          <br>
-                                          <br>
-                                          <br>
-                                          <p>Personal project that I thought about while working on Cosmological Data. I think machines are better at analysing data than humans </p>
-                                        </div>
+                                <div class="col-lg-4">
+                                    <img class="img-circle" src="img/landing.png" alt="Generic placeholder image" width="140" height="140">   
+                                    <h2>Landing Page</h2>
+                                    <p>A project I developed using React and Google Analytics to track user interaction and apply some principles of persuation.</p>
+                                    <p><a class="btn btn-default" href="https://github.com/Leny73/React-Landing-Template" role="button">View on GitHub &raquo;</a></p>
+                                </div>
+                                <div class="col-lg-4">
+                                    <img class="img-circle" src="img/start.png" alt="Generic placeholder image" width="140" height="140">   
+                                    <h2>Mythos: Vengeance of Ognyan</h2>
+                                    <p>A companion app to a board game that helps users play. I've created it using Expo and React Native mainly using Navigation.</p>
+                                    <p><a class="btn btn-default" href="https://github.com/Leny73/Mythos" role="button">View on GitHub &raquo;</a></p>
+                                </div>
+                                <div class="col-lg-4">
+                                    <img class="img-circle" src="img/memory.png" alt="Generic placeholder image" width="140" height="140">   
+                                    <h2>Memory Game</h2>
+                                    <p>One of the projects included in the Nanodegree by Udacity Front-End Web Development. A Memory game that tests the Memory of a person matching different figures using timed intervals.</p>
+                                    <p><a class="btn btn-default" href="https://github.com/Leny73/fend-project-memory-game" role="button">View on GitHub &raquo;</a></p>
+                                </div>
+                        </div>
                     </section>
                     
                     <aside class="col-sm-2 col-sm-pull-8">
                         <h1 class="range-title">Interests</h1>
                         <br>
                         <div class="range-list">
-                            <a href="">
+                            <a href="#">
                                 <img src="img/machine learning.png" alt="machine learning" />
                                 <h4>Machine Learning</h4>
                             </a>
