--- a/index.html
+++ b/index.html
@@ -30,60 +30,52 @@
             </div>
         </header>
         <main>
-            <div class="container-fluid"><!-- Start of the Container-->
-                <div class="row"><!--Start of Row-->
+            <div class="container-fluid">
+                <div class="row">
                     <section class="col-sm-8 col-sm-push-2">
-                        <article>
-                            <img src="img/acceptance.jpg">
+                        <article >
+                            <img class="box" src="img/acceptance.jpg">
                         </article>
                         <article>
-                            <img src="img/hard.png">
-                        </article>
-                        <article>
-                            <img src="img/pytorch.png">
+                            <img  src="img/hard.png">
                         </article>
                         <h1>Featured Work</h1>
                         <div class="row">
-                                <div class="col-lg-4">
-                                  <img class="img-circle" src="img/screen.png" alt="Generic placeholder image" width="140" height="140">
-                                  <h2>Cultural Map Plovdiv</h2>
-                                  <p>One of my first projects created with inspiration from my scholarship with Grow with Google. I created an interractive map using React Native showcasing the events and historical places of Plovdiv European Capital of Culture for 2019.</p>
-                                  <p><a class="btn btn-default" href="https://github.com/Leny73/Culture-Map-Plovdiv" role="button">View on GitHub &raquo;</a></p>
-                                </div>
-                                <div class="col-lg-4">
-                                  <img class="img-circle" src="img/pixel.png" alt="Generic placeholder image" width="140" height="140">
-                                  <h2>Pixel Art Maker</h2>
-                                  <p>JavaScript and JQuery project from the Google Developer Challenge that gave me the opportunity to be selected for the Google Developer Nanodegree Scholarship</p>
-                                  <p><a class="btn btn-default" href="https://github.com/Leny73/project-pixel-art-maker-starter" role="button">View on GitHub &raquo;</a></p>
-                                </div>
-                                <div class="col-lg-4">
-                                  <img class="img-circle" src="img/arcade.png" alt="Generic placeholder image" width="140" height="140">   
-                                  <h2>Arcade Game</h2>
-                                  <p>One of the projects included in the Nanodegree by Udacity Front-End Web Development. An Arcade Game that consists of 1 hero and multiple bugs the hero is trying to evade them and reach the water in order to escape. The game becomes difficult as the bugs are increasing using random number generation.</p>
-                                  <p><a class="btn btn-default" href="https://github.com/Leny73/frontend-nanodegree-arcade-game" role="button">View on GitHub &raquo;</a></p>
-                                </div>
-                                <div class="col-lg-4">
-                                    <img class="img-circle" src="img/landing.png" alt="Generic placeholder image" width="140" height="140">   
-                                    <h2>Landing Page</h2>
-                                    <p>A project I developed using React and Google Analytics to track user interaction and apply some principles of persuation.</p>
-                                    <p><a class="btn btn-default" href="https://github.com/Leny73/React-Landing-Template" role="button">View on GitHub &raquo;</a></p>
-                                </div>
-                                <div class="col-lg-4">
-                                    <img class="img-circle" src="img/start.png" alt="Generic placeholder image" width="140" height="140">   
-                                    <h2>Mythos: Vengeance of Ognyan</h2>
-                                    <p>A companion app to a board game that helps users play. I've created it using Expo and React Native mainly using Navigation.</p>
-                                    <p><a class="btn btn-default" href="https://github.com/Leny73/Mythos" role="button">View on GitHub &raquo;</a></p>
-                                </div>
-                                <div class="col-lg-4">
-                                    <img class="img-circle" src="img/memory.png" alt="Generic placeholder image" width="140" height="140">   
-                                    <h2>Memory Game</h2>
-                                    <p>One of the projects included in the Nanodegree by Udacity Front-End Web Development. A Memory game that tests the Memory of a person matching different figures using timed intervals.</p>
-                                    <p><a class="btn btn-default" href="https://github.com/Leny73/fend-project-memory-game" role="button">View on GitHub &raquo;</a></p>
-                                </div>
+                            <div class="col-lg-4">
+                                <img class="img-circle" src="img/MyReads.png" alt="Generic placeholder image" width="140" height="140">
+                                <h2>MyReads</h2>
+                                <p>React application to track books.</p>
+                                <p><a class="btn btn-default" href="https://github.com/Leny73/reactnd-project-myreads-starter" role="button">View on GitHub &raquo;</a></p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="img-circle" src="img/mws.png" alt="Generic placeholder image" width="140" height="140">
+                                <h2>Restaurant reviews</h2>
+                                <p>A responsive web application for restaurant reviews in New York.</p>
+                                <p><a class="btn btn-default" href="https://github.com/Leny73/mws-restaurant-stage-1" role="button">View on GitHub &raquo;</a></p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="img-circle" src="img/pixel.png" alt="Generic placeholder image" width="140" height="140">
+                                <h2>Pixel Art Maker</h2>
+                                <p>JavaScript and JQuery project from the Google Developer Challenge that gave me the opportunity to be selected for the Google Developer Nanodegree Scholarship</p>
+                                <p><a class="btn btn-default" href="https://github.com/Leny73/project-pixel-art-maker-starter" role="button">View on GitHub &raquo;</a></p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="img-circle" src="img/arcade.png" alt="Generic placeholder image" width="140" height="140">   
+                                <h2>Arcade Game</h2>
+                                <p>An Arcade Game that consists of 1 hero and multiple bugs the hero is trying to evade them and reach the water in order to escape. The game becomes difficult as the bugs are increasing using random number generation.</p>
+                                <p><a class="btn btn-default" href="https://github.com/Leny73/frontend-nanodegree-arcade-game" role="button">View on GitHub &raquo;</a></p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="img-circle" src="img/memory.png" alt="Generic placeholder image" width="140" height="140">   
+                                <h2>Memory Game</h2>
+                                <p>A Memory game that tests the Memory of a person matching different figures using timed intervals.</p>
+                                <p><a class="btn btn-default" href="https://github.com/Leny73/fend-project-memory-game" role="button">View on GitHub &raquo;</a></p>
+                            </div>
                         </div>
                     </section>
                     
                     <aside class="col-sm-2 col-sm-pull-8">
+                            <img class="img-circle" src="img/leny.jpg" alt="Generic placeholder image" width="120" height="120">
                         <h1 class="range-title">Interests</h1>
                         <br>
                         <div class="range-list">
