feat: add changes to Portfolio

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         <header>
             <div class ="container-fluid">
                 <div class="left_col">
-                    <img class="logoImage" src="img/logo1.jpeg">
+                    <img class="logoImage" alt='logo' src="img/yara-1.svg">
                 </div>
                 <div class="right_col">
                     <h3>Lyuben Branzalov</h3>
-                    <h3>Software Developer</h3>
+                    <h3>Software Engineer</h3>
+                    <a class="float-right" href="https://www.linkedin.com/in/lyuben-branzalov-85735913a/">LinkedIN</a>
                 </div>
             </div>
         </header>
@@ -75,7 +76,18 @@
                     </section>
                     
                     <aside class="col-sm-2 col-sm-pull-8">
-                            <img class="img-circle" src="img/leny.jpg" alt="Generic placeholder image" width="120" height="120">
+                        <img class="img-circle" src="img/leny.jpg" alt="Generic placeholder image" width="120" height="120">
+                        <h1 class="range-title">Education</h1>
+                        <div class="range-list">
+                            <a href="https://www.ed.ac.uk/">
+                                <img src="img/edi.png" height='120px' width='120px' alt="university ot edinburgh" />
+                                <h5>University of Edinburgh - Computer Science</h5>
+                            </a>
+                            <a href="#">
+                                <img src="img/sof.png" height='120px' width='120px' alt="sofia university" />
+                                <h5>Sofia University - Physics</h5>
+                            </a>
+                        </div>
                         <h1 class="range-title">Interests</h1>
                         <br>
                         <div class="range-list">
@@ -84,15 +96,14 @@
                                 <h4>Machine Learning</h4>
                             </a>
                             <a href="#">
-                                <img src="img/robotics.png" alt="robotics" />
-                                <h4>Robotics</h4>
-                            </a>
-                            <a href="#">
                                 <img src="img/Data-Analyst.png" alt="data analysis" />
                                 <h4>Data Analysis</h4>
                             </a>
                         </div>
                     </aside>
+    
+                    <br>
+                </aside>
                 </div>
             </div>
         </main>
