feat: add links to websites

--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
                         <h1>Featured Work</h1>
                         <div class="row">
                             <div class="col-lg-4">
+                                <img class="img-circle" src="img/screen.png" alt="Generic placeholder image" width="140" height="140">
+                                <h2>Culture Map - Plovdiv</h2>
+                                <p>React application using Google API to showcase the cultural sights in Plovdiv.</p>
+                                <p><a class="btn btn-default" href="https://github.com/Leny73/PlovdivCultureMap" role="button">View on GitHub &raquo;</a></p>
+                            </div>
+                            <div class="col-lg-4">
                                 <img class="img-circle" src="img/MyReads.png" alt="Generic placeholder image" width="140" height="140">
                                 <h2>MyReads</h2>
-                                <p>React application to track books.</p>
+                                <p>Responsive, accessible React application to uses Google API to display books and track your reading.</p>
                                 <p><a class="btn btn-default" href="https://github.com/Leny73/reactnd-project-myreads-starter" role="button">View on GitHub &raquo;</a></p>
                             </div>
                             <div class="col-lg-4">
@@ -83,7 +89,7 @@
                                 <img src="img/edi.png" height='120px' width='120px' alt="university ot edinburgh" />
                                 <h5>University of Edinburgh - Computer Science</h5>
                             </a>
-                            <a href="#">
+                            <a href="https://www.uni-sofia.bg/index.php/eng">
                                 <img src="img/sof.png" height='120px' width='120px' alt="sofia university" />
                                 <h5>Sofia University - Physics</h5>
                             </a>
@@ -91,11 +97,11 @@
                         <h1 class="range-title">Interests</h1>
                         <br>
                         <div class="range-list">
-                            <a href="#">
+                            <a href="https://www.coursera.org/articles/what-is-machine-learning">
                                 <img src="img/machine learning.png" alt="machine learning" />
                                 <h4>Machine Learning</h4>
                             </a>
-                            <a href="#">
+                            <a href="https://www.datapine.com/blog/data-analysis-methods-and-techniques/">
                                 <img src="img/Data-Analyst.png" alt="data analysis" />
                                 <h4>Data Analysis</h4>
                             </a>
