--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </section>
                     
                     <aside class="col-sm-2 col-sm-pull-8">
-                        <img class="img-circle" src="img/leny.jpg" alt="Generic placeholder image" width="120" height="120">
+                        <img class="img-circle" src="img/Leny.jpg" alt="Generic placeholder image" width="120" height="120">
                         <h1 class="range-title">Education</h1>
                         <div class="range-list">
                             <a href="https://www.ed.ac.uk/">
